objects/ESC_segment_Region_Lotus__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ESC_IP_BU_Marketing_Segment__c</fullName>
        <label>IP BU Marketing Segment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionEuropeCorp__c</fullName>
        <label>RegionEuropeCorp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionEuropeLegal__c</fullName>
        <label>RegionEuropeLegal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionUSCorp__c</fullName>
        <label>RegionUSCorp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionUSLegal__c</fullName>
        <label>RegionUSLegal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentCorp__c</fullName>
        <label>SegmentCorp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentLegal__c</fullName>
        <label>SegmentLegal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentLegal_blank__c</fullName>
        <label>SegmentLegal_blank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentTax__c</fullName>
        <label>SegmentTax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ESC Segment Region Lotus</label>
</CustomObject>